2004-07-25  Philippe Gerum  <rpm@xenomai.org>

 	* RELEASE: fusion-0.3

2004-07-25  Philippe Gerum  <rpm@xenomai.org>

	* configure.in: Discard legacy kbuild support (pre-2.6.6) from
	RTAI_KBUILD_CMD.

2004-07-23  Marc Kleine-Budde <kleine-budde@gmx.de>

	* skins/posix/sem.c (sem_init): Add newly created semaphores to
	pse51_semq.

2004-07-22  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/pipe.c (rt_pipe_alloc): Fix allocation size to
	encompass the header space.

	* skins/rtai/pipe.c (__pipe_close_handler): Shutdown the kernel
	side of the pipe upon closure of the user-space side.

2004-07-22  Marc Kleine-Budde <kleine-budde@gmx.de>

	* scripts/rtai-config: Fix output of --config.

2004-07-21  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Upgrade to Adeos 2.6.7-r6c4.

2004-07-21  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* nucleus/pod.c (xnpod_schedule, xnpod_schedule_runnable): Test 
	the XNKILLED bit early in the scheduling functions, to avoid
	inter-cpu races conditions where one CPU decides to kill one
	thread, whereas the thread is currently	suspending itself on
	another CPU.
	(xnpod_dispatch_signals): clear the XNKILLED bit once tested.
	(xnpod_shutdown): Remove a potentially harmful xnlock_init.
							
	* nucleus/shadow.c (xnshadow_wakeup_handler): Reflect shadow
	inter-cpu migrations on its user-space mate.
				
2004-07-21  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* include/nucleus/asm-i386/system.h (__switch_threads): Provide
	a different version for gcc before version 3.2.
		
2004-07-17  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* include/nucleus/asm-i386/system.h (__switch_threads): Mark the
	eax and edx registers as input/output and ebx and esi as clobbered
	in order to avoid Debian gcc 3.3.4 to generate code reusing ebx
	after the context switch for a Xeon kernel with SMP and without
	preemption enabled.

	* nucleus/shadow.c (xnshadow_kick_process): Set the rescheduling